src/components/VoterList/VoterList.css
.voter-list-container{
  overflow: auto;
}

.voter-list-wrapper{
  width: 100%;
  border-spacing: 0;
}

.container-voter-item{
  display:flex;
  width: 100%;
  justify-content:space-between;
  align-items: center;
}

.container-voter-item td, 
.container-voter-item th{
  min-width: 100px;
  height: 60px;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  white-space: nowrap;
  overflow: hidden;
  border: 1px solid rgb(129, 129, 129);
  text-align: center;
}

.container-voter-item th{
  text-transform: uppercase;
}

.show-more-button{
  width: 100%;
  padding: 0.5rem 0;
  background-color: rgb(166, 3, 166);
  color: white;
  font-weight: 600;
  text-transform: uppercase;
  outline: none;
  cursor: pointer;
  border: none;
  font-size: 1.2rem;
  margin-top: 1rem;
  border-radius: 10px;
}

